@@ -1,7 +1,7 @@
 _____________________________________________________
        ===== НОВОСТИ ПРО ЭКО ====
 
-                   EKO 7.0.0, январь 2022
+                   EKO 7.0.1, январь 2022
 _____________________________________________________
 
 http://semiletov.org/eko (стабильная версия) 
