@@ -1,7 +1,7 @@
 _____________________________________________________
        ===== NEWS ABOUT EKO ====                 
 
-                   EKO 7.0.0, January 2022                         
+                   EKO 7.0.1, January 2022                         
 _____________________________________________________
 
 http://semiletov.org/eko (stable ver. with win32 builds)
