@@ -1,3 +1,6 @@
+2022 01 24
++CMake support fixed
+
 2017 dec
 * fixes
 
